platform_versioned_docs/version-4.12.0/api/_partials/resources/nodeproviders/reference.mdx

import Metadata from "../metadata/reference.mdx"

<Metadata />



<details className="config-field" data-expandable="true">
<summary>

## `spec` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec}



</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `properties` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-properties}

Properties are global properties that are applied to all node claims and environments managed by this provider.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `bcm` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm}

BCM configures a node provider for BCM Bare Metal Cloud environments.

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `secretRef` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-secretRef}

SecretRef is a reference to secret with keys for BCM auth.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-secretRef-name}

Name is the name of this resource

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespace` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-secretRef-namespace}

Namespace is the namespace of this resource

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `endpoint` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-endpoint}

Endpoint is an address for head node.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `nodeTypes` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-nodeTypes}

NodeTypes define NodeTypes that should be automatically created for this provider.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `providerRef` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-nodeTypes-providerRef}

ProviderRef is the node provider to use for this node type.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `properties` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-nodeTypes-properties}

Properties returns a flexible set of properties that may be selected for scheduling.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `resources` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-nodeTypes-resources}

Resources lists the full resources for a single node.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `overhead` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-nodeTypes-overhead}

Overhead defines the resource overhead for this node type.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `kubeReserved` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-nodeTypes-overhead-kubeReserved}

KubeReserved is the resource overhead for kubelet and other Kubernetes system daemons.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `cost` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-nodeTypes-cost}

Cost is the instance cost. The higher the cost, the less likely it is to be selected. If empty, cost is automatically calculated
from the resources specified.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `displayName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-nodeTypes-displayName}

DisplayName is the name that should be displayed in the UI

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-nodeTypes-name}

Name is the name of this node type.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `metadata` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-nodeTypes-metadata}

Metadata holds metadata to add to this managed NodeType.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `labels` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-nodeTypes-metadata-labels}

Labels holds labels to add to this managed NodeType.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `annotations` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-nodeTypes-metadata-annotations}

Annotations holds annotations to add to this managed NodeType.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `nodes` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-nodeTypes-nodes}

Nodes specifies nodes.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `nodeGroups` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-bcm-nodeTypes-nodeGroups}

NodeGroups is the name of the node groups to use for this provider.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `kubeVirt` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt}

Kubevirt configures a node provider using KubeVirt, enabling virtual machines
to be provisioned as nodes within a vCluster.

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `clusterRef` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-clusterRef}

ClusterRef is a reference to connected control plane cluster in which KubeVirt operator is running

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `cluster` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-clusterRef-cluster}

Cluster is the connected cluster the VMs will be created in

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespace` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-clusterRef-namespace}

Namespace is the namespace inside the connected cluster holding VMs

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `namespaceStrategy` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-namespaceStrategy}

NamespaceStrategy determines in which namespace of the connected cluster the
VirtualMachines are created.
"Provider" (default) creates all VirtualMachines in clusterRef.namespace.
"VirtualCluster" creates the VirtualMachines in the namespace of the tenant
cluster the NodeClaim belongs to. If the NodeClaim cannot be traced back to a
tenant cluster namespace within clusterRef.cluster, clusterRef.namespace is
used instead.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `deploy` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-deploy}

Deploy configures components deployed into the connected control plane cluster.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `kubevirt` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-deploy-kubevirt}

KubeVirt configures the KubeVirt operator deployment.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-deploy-kubevirt-enabled}

Enabled controls whether the KubeVirt operator is deployed into the cluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `chartRepo` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-deploy-kubevirt-chartRepo}

ChartRepo overrides the Helm chart repository used to install the KubeVirt operator.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `chart` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-deploy-kubevirt-chart}

Chart overrides the Helm chart name used to install the KubeVirt operator.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `version` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-deploy-kubevirt-version}

Version overrides the Helm chart version used to install the KubeVirt operator.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `helmValues` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-deploy-kubevirt-helmValues}

HelmValues is raw YAML that will be passed as values to the KubeVirt Helm chart.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `vClusterDeviceOperator` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-deploy-vClusterDeviceOperator}

VClusterDeviceOperator configures the vCluster device operator deployment.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-deploy-vClusterDeviceOperator-enabled}

Enabled controls whether the vCluster device operator is deployed into the cluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `chartRepo` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-deploy-vClusterDeviceOperator-chartRepo}

ChartRepo overrides the Helm chart repository used to install the operator.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `chart` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-deploy-vClusterDeviceOperator-chart}

Chart overrides the Helm chart name used to install the operator.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `version` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-deploy-vClusterDeviceOperator-version}

Version overrides the Helm chart version used to install the operator.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `helmValues` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-deploy-vClusterDeviceOperator-helmValues}

HelmValues is raw YAML that will be passed as values to the Helm chart.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `virtualMachineTemplate` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-virtualMachineTemplate}

VirtualMachineTemplate is a KubeVirt VirtualMachine template to use by NodeTypes managed by this NodeProvider

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `nodeTypes` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-nodeTypes}

NodeTypes define NodeTypes that should be automatically created for this provider.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `providerRef` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-nodeTypes-providerRef}

ProviderRef is the node provider to use for this node type.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `properties` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-nodeTypes-properties}

Properties returns a flexible set of properties that may be selected for scheduling.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `resources` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-nodeTypes-resources}

Resources lists the full resources for a single node.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `overhead` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-nodeTypes-overhead}

Overhead defines the resource overhead for this node type.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `kubeReserved` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-nodeTypes-overhead-kubeReserved}

KubeReserved is the resource overhead for kubelet and other Kubernetes system daemons.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `cost` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-nodeTypes-cost}

Cost is the instance cost. The higher the cost, the less likely it is to be selected. If empty, cost is automatically calculated
from the resources specified.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `displayName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-nodeTypes-displayName}

DisplayName is the name that should be displayed in the UI

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-nodeTypes-name}

Name is the name of this node type.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `metadata` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-nodeTypes-metadata}

Metadata holds metadata to add to this managed NodeType.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `labels` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-nodeTypes-metadata-labels}

Labels holds labels to add to this managed NodeType.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `annotations` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-nodeTypes-metadata-annotations}

Annotations holds annotations to add to this managed NodeType.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `virtualMachineTemplate` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-nodeTypes-virtualMachineTemplate}

VirtualMachineTemplate is a full KubeVirt VirtualMachine template to use for this NodeType.
This is mutually exclusive with MergeVirtualMachineTemplate

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `mergeVirtualMachineTemplate` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-nodeTypes-mergeVirtualMachineTemplate}

MergeVirtualMachineTemplate will be merged into base VirtualMachine template for this NodeProvider.
This allows overwriting of specific fields from top level template by individual NodeTypes
This is mutually exclusive with VirtualMachineTemplate

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `maxCapacity` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-kubeVirt-nodeTypes-maxCapacity}

MaxCapacity is the maximum number of nodes that can be created for this NodeType.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `terraform` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform}

Terraform configures a node provider using Terraform, enabling nodes to be provisioned using Terraform.

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `nodeTemplate` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTemplate}

NodeTemplate is the template to use for this node provider.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `inline` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTemplate-inline}

Inline is the inline template to use for this node type.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `git` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTemplate-git}

Git is the git repository to use for this node type.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `repository` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTemplate-git-repository}

Repository is the repository to clone

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `branch` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTemplate-git-branch}

Branch is the branch to use

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `commit` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTemplate-git-commit}

Commit is the commit SHA to checkout

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `tag` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTemplate-git-tag}

Tag is the tag reference to checkout

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `subPath` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTemplate-git-subPath}

SubPath is the subpath in the repo to use

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `credentials` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTemplate-git-credentials}

Credentials is the reference to a secret containing the username and password for the git repository.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `secretName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTemplate-git-credentials-secretName}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `secretNamespace` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTemplate-git-credentials-secretNamespace}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTemplate-git-credentials-key}



</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `fetchInterval` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTemplate-git-fetchInterval}

FetchInterval is the interval to use for refetching the git repository. Defaults to 5m. Refetching only checks for remote changes but does not do a complete repull.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `extraEnv` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTemplate-git-extraEnv}

ExtraEnv is the extra environment variables to use for the clone

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `timeout` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTemplate-timeout}

Timeout is the timeout to use for the terraform operations. Defaults to 60m.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `nodeEnvironmentTemplate` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate}

NodeEnvironmentTemplate is the template to use for this node environment.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `inline` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-inline}

Inline is the inline template to use for this node type.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `git` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-git}

Git is the git repository to use for this node type.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `repository` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-git-repository}

Repository is the repository to clone

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `branch` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-git-branch}

Branch is the branch to use

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `commit` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-git-commit}

Commit is the commit SHA to checkout

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `tag` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-git-tag}

Tag is the tag reference to checkout

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `subPath` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-git-subPath}

SubPath is the subpath in the repo to use

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `credentials` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-git-credentials}

Credentials is the reference to a secret containing the username and password for the git repository.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `secretName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-git-credentials-secretName}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `secretNamespace` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-git-credentials-secretNamespace}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-git-credentials-key}



</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `fetchInterval` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-git-fetchInterval}

FetchInterval is the interval to use for refetching the git repository. Defaults to 5m. Refetching only checks for remote changes but does not do a complete repull.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `extraEnv` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-git-extraEnv}

ExtraEnv is the extra environment variables to use for the clone

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `timeout` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-timeout}

Timeout is the timeout to use for the terraform operations. Defaults to 60m.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `infrastructure` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-infrastructure}

Infrastructure is the infrastructure template to use for this node environment.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `inline` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-infrastructure-inline}

Inline is the inline template to use for this node type.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `git` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-infrastructure-git}

Git is the git repository to use for this node type.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `repository` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-infrastructure-git-repository}

Repository is the repository to clone

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `branch` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-infrastructure-git-branch}

Branch is the branch to use

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `commit` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-infrastructure-git-commit}

Commit is the commit SHA to checkout

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `tag` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-infrastructure-git-tag}

Tag is the tag reference to checkout

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `subPath` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-infrastructure-git-subPath}

SubPath is the subpath in the repo to use

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `credentials` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-infrastructure-git-credentials}

Credentials is the reference to a secret containing the username and password for the git repository.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `secretName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-infrastructure-git-credentials-secretName}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `secretNamespace` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-infrastructure-git-credentials-secretNamespace}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-infrastructure-git-credentials-key}



</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `fetchInterval` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-infrastructure-git-fetchInterval}

FetchInterval is the interval to use for refetching the git repository. Defaults to 5m. Refetching only checks for remote changes but does not do a complete repull.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `extraEnv` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-infrastructure-git-extraEnv}

ExtraEnv is the extra environment variables to use for the clone

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `timeout` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-infrastructure-timeout}

Timeout is the timeout to use for the terraform operations. Defaults to 60m.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `kubernetes` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-kubernetes}

Kubernetes is the kubernetes template to use for this node environment.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `inline` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-kubernetes-inline}

Inline is the inline template to use for this node type.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `git` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-kubernetes-git}

Git is the git repository to use for this node type.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `repository` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-kubernetes-git-repository}

Repository is the repository to clone

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `branch` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-kubernetes-git-branch}

Branch is the branch to use

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `commit` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-kubernetes-git-commit}

Commit is the commit SHA to checkout

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `tag` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-kubernetes-git-tag}

Tag is the tag reference to checkout

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `subPath` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-kubernetes-git-subPath}

SubPath is the subpath in the repo to use

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `credentials` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-kubernetes-git-credentials}

Credentials is the reference to a secret containing the username and password for the git repository.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `secretName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-kubernetes-git-credentials-secretName}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `secretNamespace` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-kubernetes-git-credentials-secretNamespace}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-kubernetes-git-credentials-key}



</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `fetchInterval` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-kubernetes-git-fetchInterval}

FetchInterval is the interval to use for refetching the git repository. Defaults to 5m. Refetching only checks for remote changes but does not do a complete repull.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `extraEnv` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-kubernetes-git-extraEnv}

ExtraEnv is the extra environment variables to use for the clone

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `timeout` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeEnvironmentTemplate-kubernetes-timeout}

Timeout is the timeout to use for the terraform operations. Defaults to 60m.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `nodeTypes` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes}

NodeTypes define NodeTypes that should be automatically created for this provider.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `providerRef` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-providerRef}

ProviderRef is the node provider to use for this node type.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `properties` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-properties}

Properties returns a flexible set of properties that may be selected for scheduling.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `resources` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-resources}

Resources lists the full resources for a single node.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `overhead` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-overhead}

Overhead defines the resource overhead for this node type.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `kubeReserved` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-overhead-kubeReserved}

KubeReserved is the resource overhead for kubelet and other Kubernetes system daemons.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `cost` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-cost}

Cost is the instance cost. The higher the cost, the less likely it is to be selected. If empty, cost is automatically calculated
from the resources specified.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `displayName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-displayName}

DisplayName is the name that should be displayed in the UI

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-name}

Name is the name of this node type.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `metadata` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-metadata}

Metadata holds metadata to add to this managed NodeType.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `labels` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-metadata-labels}

Labels holds labels to add to this managed NodeType.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `annotations` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-metadata-annotations}

Annotations holds annotations to add to this managed NodeType.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `nodeTemplate` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-nodeTemplate}

NodeTemplate is the template to use for this node type.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `inline` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-nodeTemplate-inline}

Inline is the inline template to use for this node type.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `git` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-nodeTemplate-git}

Git is the git repository to use for this node type.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `repository` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-nodeTemplate-git-repository}

Repository is the repository to clone

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `branch` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-nodeTemplate-git-branch}

Branch is the branch to use

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `commit` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-nodeTemplate-git-commit}

Commit is the commit SHA to checkout

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `tag` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-nodeTemplate-git-tag}

Tag is the tag reference to checkout

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `subPath` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-nodeTemplate-git-subPath}

SubPath is the subpath in the repo to use

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `credentials` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-nodeTemplate-git-credentials}

Credentials is the reference to a secret containing the username and password for the git repository.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `secretName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-nodeTemplate-git-credentials-secretName}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `secretNamespace` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-nodeTemplate-git-credentials-secretNamespace}



</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-nodeTemplate-git-credentials-key}



</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `fetchInterval` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-nodeTemplate-git-fetchInterval}

FetchInterval is the interval to use for refetching the git repository. Defaults to 5m. Refetching only checks for remote changes but does not do a complete repull.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `extraEnv` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-nodeTemplate-git-extraEnv}

ExtraEnv is the extra environment variables to use for the clone

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `timeout` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-nodeTemplate-timeout}

Timeout is the timeout to use for the terraform operations. Defaults to 60m.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `maxCapacity` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-terraform-nodeTypes-maxCapacity}

MaxCapacity is the maximum number of nodes that can be created for this NodeType.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `clusterAPI` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI}

ClusterAPI configures a node provider using Cluster API, enabling nodes to be provisioned using Cluster API.
This requires the vCluster to be deployed with Cluster API as well.

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `infrastructureMachineTemplate` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-infrastructureMachineTemplate}

InfrastructureMachineTemplate is a template for the infrastructure machine, e.g. AWSMachine

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `bootstrapConfigTemplate` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-bootstrapConfigTemplate}

BootstrapConfigTemplate is a template for the bootstrap config. Currently only KubeadmConfig is supported.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `clusterRef` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-clusterRef}

ClusterRef is a reference to connected control plane cluster in which KubeVirt operator is running

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `cluster` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-clusterRef-cluster}

Cluster is the connected cluster the VMs will be created in

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespace` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-clusterRef-namespace}

Namespace is the namespace inside the connected cluster holding VMs

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `nodeTypes` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes}

NodeTypes define NodeTypes that should be automatically created for this provider.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `providerRef` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes-providerRef}

ProviderRef is the node provider to use for this node type.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `properties` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes-properties}

Properties returns a flexible set of properties that may be selected for scheduling.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `resources` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes-resources}

Resources lists the full resources for a single node.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `overhead` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes-overhead}

Overhead defines the resource overhead for this node type.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `kubeReserved` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes-overhead-kubeReserved}

KubeReserved is the resource overhead for kubelet and other Kubernetes system daemons.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `cost` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes-cost}

Cost is the instance cost. The higher the cost, the less likely it is to be selected. If empty, cost is automatically calculated
from the resources specified.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `displayName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes-displayName}

DisplayName is the name that should be displayed in the UI

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes-name}

Name is the name of this node type.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `metadata` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes-metadata}

Metadata holds metadata to add to this managed NodeType.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `labels` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes-metadata-labels}

Labels holds labels to add to this managed NodeType.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `annotations` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes-metadata-annotations}

Annotations holds annotations to add to this managed NodeType.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `infrastructureMachineTemplate` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes-infrastructureMachineTemplate}

InfrastructureMachineTemplate is a template for the infrastructure machine, e.g. AWSMachine

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `bootstrapConfigTemplate` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes-bootstrapConfigTemplate}

BootstrapConfigTemplate is a template for the bootstrap config. Currently only KubeadmConfig is supported.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `mergeInfrastructureMachineTemplate` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes-mergeInfrastructureMachineTemplate}

MergeInfrastructureMachineTemplate will be merged into base InfrastructureMachine template for this NodeProvider.
This allows overwriting of specific fields from top level template by individual NodeTypes
This is mutually exclusive with InfrastructureMachineTemplate

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `mergeBootstrapConfigTemplate` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes-mergeBootstrapConfigTemplate}

MergeBootstrapConfigTemplate will be merged into base BootstrapConfig template for this NodeProvider.
This allows overwriting of specific fields from top level template by individual NodeTypes
This is mutually exclusive with BootstrapConfigTemplate

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `maxCapacity` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-clusterAPI-nodeTypes-maxCapacity}

MaxCapacity is the maximum number of nodes that can be created for this NodeType.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `metal3` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3}

Metal3 configures a node provider using metal3.io BareMetalHost resources.

</summary>




<details className="config-field" data-expandable="true">
<summary>

#### `clusterRef` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-clusterRef}

ClusterRef is a reference to connected control plane cluster in which KubeVirt operator is running

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `cluster` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-clusterRef-cluster}

Cluster is the connected cluster the VMs will be created in

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespace` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-clusterRef-namespace}

Namespace is the namespace inside the connected cluster holding VMs

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `deploy` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-deploy}



</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `multus` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-deploy-multus}

Multus configures the Multus CNI deployment.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-deploy-multus-enabled}

Enabled controls whether Multus CNI is deployed into the cluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `helmValues` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-deploy-multus-helmValues}

HelmValues is raw YAML that will be passed as values to the Multus Helm chart.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `dhcp` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-deploy-dhcp}

DHCP configures the DHCP server deployment.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-deploy-dhcp-enabled}

Enabled controls whether the DHCP server is deployed into the cluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `chartRepo` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-deploy-dhcp-chartRepo}

ChartRepo overrides the Helm chart repository used to install the DHCP server.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `chart` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-deploy-dhcp-chart}

Chart overrides the Helm chart name used to install the DHCP server.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `version` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-deploy-dhcp-version}

Version overrides the Helm chart version used to install the DHCP server.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `helmValues` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-deploy-dhcp-helmValues}

HelmValues is raw YAML that will be passed as values to the DHCP Helm chart.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `metal3` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-deploy-metal3}

Metal3 configures the Metal3/Ironic deployment.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-deploy-metal3-enabled}

Enabled controls whether Metal3 and Ironic are deployed into the cluster.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `chartRepo` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-deploy-metal3-chartRepo}

ChartRepo overrides the Helm chart repository used to install Metal3.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `chart` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-deploy-metal3-chart}

Chart overrides the Helm chart name used to install Metal3.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `version` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-deploy-metal3-version}

Version overrides the Helm chart version used to install Metal3.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `helmValues` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-deploy-metal3-helmValues}

HelmValues is raw YAML that will be passed as values to the Metal3 Helm chart.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `nodeTypes` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes}

NodeTypes define NodeTypes that should be automatically created for this provider.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `providerRef` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-providerRef}

ProviderRef is the node provider to use for this node type.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `properties` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-properties}

Properties returns a flexible set of properties that may be selected for scheduling.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `resources` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-resources}

Resources lists the full resources for a single node.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `overhead` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-overhead}

Overhead defines the resource overhead for this node type.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `kubeReserved` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-overhead-kubeReserved}

KubeReserved is the resource overhead for kubelet and other Kubernetes system daemons.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `cost` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-cost}

Cost is the instance cost. The higher the cost, the less likely it is to be selected. If empty, cost is automatically calculated
from the resources specified.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `displayName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-displayName}

DisplayName is the name that should be displayed in the UI

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-name}

Name is the name of this node type.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `metadata` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-metadata}

Metadata holds metadata to add to this managed NodeType.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `labels` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-metadata-labels}

Labels holds labels to add to this managed NodeType.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `annotations` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-metadata-annotations}

Annotations holds annotations to add to this managed NodeType.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `bareMetalHosts` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-bareMetalHosts}

BareMetalHosts is a list of BareMetalHosts to use for this NodeType.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `selector` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-bareMetalHosts-selector}

Selector is a label selector to select the BareMetalHosts to use for this NodeType.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `matchLabels` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-bareMetalHosts-selector-matchLabels}

matchLabels is a map of &#123;key,value&#125; pairs. A single &#123;key,value&#125; in the matchLabels
map is equivalent to an element of matchExpressions, whose key field is "key", the
operator is "In", and the values array contains only "value". The requirements are ANDed.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `matchExpressions` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-bareMetalHosts-selector-matchExpressions}

matchExpressions is a list of label selector requirements. The requirements are ANDed.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-bareMetalHosts-selector-matchExpressions-key}

key is the label key that the selector applies to.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operator` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-bareMetalHosts-selector-matchExpressions-operator}

operator represents a key's relationship to a set of values.
Valid operators are In, NotIn, Exists and DoesNotExist.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-nodeTypes-bareMetalHosts-selector-matchExpressions-values}

values is an array of string values. If the operator is In or NotIn,
the values array must be non-empty. If the operator is Exists or DoesNotExist,
the values array must be empty. This array is replaced during a strategic
merge patch.

</summary>



</details>


</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `neutronEnabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-neutronEnabled}

NeutronEnabled turns on the neutron network shim for this provider: BareMetalHost network
attachments are allocated by the platform and reconciled through ConfigMaps instead of
being written directly as DHCP annotations.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `netris` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-netris}

Netris attaches BareMetalHosts to a Netris server cluster on provisioning.

</summary>




<details className="config-field" data-expandable="true">
<summary>

##### `secretRef` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-netris-secretRef}

SecretRef references a Secret with keys url, username and password for the Netris API.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-netris-secretRef-name}

Name is the name of this resource

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespace` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-metal3-netris-secretRef-namespace}

Namespace is the namespace of this resource

</summary>



</details>


</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `displayName` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#spec-displayName}

DisplayName is the name that should be displayed in the UI

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

## `status` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status}



</summary>




<details className="config-field" data-expandable="true">
<summary>

### `conditions` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-conditions}

Conditions describe the current state of the platform NodeProvider.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `reason` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-reason}

Reason describes the reason in machine-readable form

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `phase` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-phase}

Phase is the current lifecycle phase of the NodeProvider.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `message` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-message}

Message is a human-readable message indicating details about why the NodeProvider is in its current state.

</summary>



</details>


</details>
